Group_01_FinalProject/FinalProject.cydsn/BUILD.log
--------------- Build Started: 05/27/2020 16:39:08 Project: FinalProject, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/InterruptRoutines.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c InterruptRoutines.c -o .\CortexM3\ARM_GCC_541\Debug\InterruptRoutines.o
In file included from InterruptRoutines.c:12:0:
InterruptRoutines.h:24:15: error: expected identifier or '(' before numeric constant
     #define T 2
               ^
Generated_Source\PSoC5/core_cm3.h:264:14: note: in expansion of macro 'T'
     uint32_t T:1;                        /*!< bit:     24  Thumb bit */
              ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/27/2020 16:39:08 ---------------
